--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "dependencies": {
     "@ionic/core": "0.0.2-48",
     "@stencil/core": "0.2.1",
-    "@stencil/router": "latest"
+    "@stencil/router": "latest",
+    "localforage": "^1.5.6",
+    "localforage-cordovasqlitedriver": "^1.7.0"
   },
   "devDependencies": {
     "@stencil/dev-server": "latest",
